// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stories Snapshots Documentazione/Organizzare i contenuti/Tipografia Abbrevazioni 1`] = `
<div>
  <p>
    <abbr
      title="attribute"
    >
      attr
    </abbr>
  </p>
  <p>
    <abbr
      class="initialism"
      title="HyperText Markup Language"
    >
      HTML
    </abbr>
  </p>
</div>
`;

exports[`Stories Snapshots Documentazione/Organizzare i contenuti/Tipografia AllineamentoADestra 1`] = `
<div>
  <blockquote
    class="blockquote text-end"
  >
    <p
      class="mb-0"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.
    </p>
    <footer
      class="blockquote-footer"
    >
      Someone famous in 
      <cite
        title="Source Title"
      >
        Source Title
      </cite>
    </footer>
  </blockquote>
</div>
`;

exports[`Stories Snapshots Documentazione/Organizzare i contenuti/Tipografia AllineamentoCentrato 1`] = `
<div>
  <blockquote
    class="blockquote text-center"
  >
    <p
      class="mb-0"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.
    </p>
    <footer
      class="blockquote-footer"
    >
      Someone famous in 
      <cite
        title="Source Title"
      >
        Source Title
      </cite>
    </footer>
  </blockquote>
</div>
`;

exports[`Stories Snapshots Documentazione/Organizzare i contenuti/Tipografia CitazioneFonte 1`] = `
<div>
  <blockquote
    class="blockquote"
  >
    <p
      class="mb-0"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.
    </p>
    <footer
      class="blockquote-footer"
    >
      Someone famous in 
      <cite
        title="Source Title"
      >
        Source Title
      </cite>
    </footer>
  </blockquote>
</div>
`;

exports[`Stories Snapshots Documentazione/Organizzare i contenuti/Tipografia Citazioni 1`] = `
<div>
  <blockquote
    class="blockquote"
  >
    <p
      class="mb-0"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.
    </p>
  </blockquote>
</div>
`;

exports[`Stories Snapshots Documentazione/Organizzare i contenuti/Tipografia Dimensioni 1`] = `
<div>
  <table>
    <thead>
      <tr>
        <th>
          Intestazione
        </th>
        <th>
          Mobile
        </th>
        <th>
          Schermo &gt; 576px
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          <h1>
            h1
          </h1>
        </td>
        <td>
          Bold, 40px/48px
        </td>
        <td>
          Bold, 48px/60px
        </td>
      </tr>
      <tr>
        <td>
          <h2>
            h2
          </h2>
        </td>
        <td>
          Bold, 32px/40px
        </td>
        <td>
          Bold, 40px/48px
        </td>
      </tr>
      <tr>
        <td>
          <h3>
            h3
          </h3>
        </td>
        <td>
          Bold, 28px/32px
        </td>
        <td>
          Bold, 32px/40px
        </td>
      </tr>
      <tr>
        <td>
          <h4>
            h4
          </h4>
        </td>
        <td>
          SemiBold, 24px/28px
        </td>
        <td>
          SemiBold, 28px/40px
        </td>
      </tr>
      <tr>
        <td>
          <h5>
            h5
          </h5>
        </td>
        <td>
          Regular, 20px/24px
        </td>
        <td>
          Regular, 24px/40px
        </td>
      </tr>
      <tr>
        <td>
          <h6>
            h6
          </h6>
        </td>
        <td>
          SemiBold, 16px/24px
        </td>
        <td>
          SemiBold, 18px/28px
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Stories Snapshots Documentazione/Organizzare i contenuti/Tipografia IntestazioneSecondario 1`] = `
<div>
  <h4>
    Intestazione 
    <small
      class="text-muted"
    >
      con testo secondario
    </small>
  </h4>
</div>
`;

exports[`Stories Snapshots Documentazione/Organizzare i contenuti/Tipografia IntestazioneTipo 1`] = `
<div>
  <h1
    class="display-1"
  >
    Intestazione di tipo h1
  </h1>
</div>
`;

exports[`Stories Snapshots Documentazione/Organizzare i contenuti/Tipografia Intestazioni 1`] = `
<div>
  <h1>
    Intestazione di tipo h1
  </h1>
  <h2>
    Intestazione di tipo h2
  </h2>
  <h3>
    Intestazione di tipo h3
  </h3>
  <h4>
    Intestazione di tipo h4
  </h4>
  <h5>
    Intestazione di tipo h5
  </h5>
  <h6>
    Intestazione di tipo h6
  </h6>
</div>
`;

exports[`Stories Snapshots Documentazione/Organizzare i contenuti/Tipografia Link 1`] = `
<div>
  <p>
    Esempio di 
    <a
      href="#"
    >
      link normale
    </a>
    .
  </p>
  <p>
    Esempio di 
    <a
      class="text-decoration-none fw-bold"
      href="#"
    >
      link in grassetto senza sottolineatura
    </a>
    .
  </p>
</div>
`;

exports[`Stories Snapshots Documentazione/Organizzare i contenuti/Tipografia Liste 1`] = `
<div>
  <ul
    class="list-unstyled"
  >
    <li>
      Lorem ipsum dolor sit amet
    </li>
    <li>
      Consectetur adipiscing elit
    </li>
    <li>
      Integer molestie lorem at massa
    </li>
    <li>
      Facilisis in pretium nisl aliquet
    </li>
    <li>
      Nulla volutpat aliquam velit
      <ul>
        <li>
          Phasellus iaculis neque
        </li>
        <li>
          Purus sodales ultricies
        </li>
        <li>
          Vestibulum laoreet porttitor sem
        </li>
        <li>
          Ac tristique libero volutpat at
        </li>
      </ul>
    </li>
    <li>
      Faucibus porta lacus fringilla vel
    </li>
    <li>
      Aenean sit amet erat nunc
    </li>
    <li>
      Eget porttitor lorem
    </li>
  </ul>
</div>
`;

exports[`Stories Snapshots Documentazione/Organizzare i contenuti/Tipografia ListeAllineate 1`] = `
<div>
  <dl
    class="row"
  >
    <dt
      class="col-sm-3"
    >
      Description lists
    </dt>
    <dd
      class="col-sm-9"
    >
      A description list is perfect for defining terms.
    </dd>
    <dt
      class="col-sm-3"
    >
      Euismod
    </dt>
    <dd
      class="col-sm-9"
    >
      <p>
        Vestibulum id ligula porta felis euismod semper eget lacinia odio sem nec elit.
      </p>
      <p>
        Donec id elit non mi porta gravida at eget metus.
      </p>
    </dd>
    <dt
      class="col-sm-3"
    >
      Malesuada porta
    </dt>
    <dd
      class="col-sm-9"
    >
      Etiam porta sem malesuada magna mollis euismod.
    </dd>
    <dt
      class="col-sm-3 text-truncate"
    >
      Truncated term is truncated
    </dt>
    <dd
      class="col-sm-9"
    >
      Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
    </dd>
    <dt
      class="col-sm-3"
    >
      Nesting
    </dt>
    <dd
      class="col-sm-9"
    >
      <dl
        class="row"
      >
        <dt
          class="col-sm-4"
        >
          Nested definition list
        </dt>
        <dd
          class="col-sm-8"
        >
          Aenean posuere, tortor sed cursus feugiat, nunc augue blandit nunc.
        </dd>
      </dl>
    </dd>
  </dl>
</div>
`;

exports[`Stories Snapshots Documentazione/Organizzare i contenuti/Tipografia ListeInline 1`] = `
<div>
  <ul
    class="list-inline"
  >
    <li
      class="list-inline-item"
    >
      Lorem ipsum
    </li>
    <li
      class="list-inline-item"
    >
      Phasellus iaculis
    </li>
    <li
      class="list-inline-item"
    >
      Nulla volutpat
    </li>
  </ul>
</div>
`;

exports[`Stories Snapshots Documentazione/Organizzare i contenuti/Tipografia Lora 1`] = `
<div>
  <p
    class="text-serif"
  >
    ABCDEFGHIJKLMNOPQRSTUVWXYZ
  </p>
  <p
    class="text-serif"
  >
    abcdefghijklmnopqrstuvwxyz
  </p>
  <p
    class="text-serif"
  >
    0123456789
  </p>
</div>
`;

exports[`Stories Snapshots Documentazione/Organizzare i contenuti/Tipografia ParagrafiPersonalizzati 1`] = `
<div>
  <p>
    Esempio di testo 
    <u>
      sottolineato
    </u>
    .
  </p>
  <p>
    Esempio di testo 
    <mark>
      evidenziato
    </mark>
    .
  </p>
  <p>
    Esempio di testo 
    <em>
      corsivo
    </em>
    .
  </p>
  <p>
    Esempio di testo 
    <strong>
      in grassetto
    </strong>
    .
  </p>
  <p>
    Esempio di testo 
    <small>
      rimpicciolito
    </small>
    .
  </p>
  <p>
    Esempio di testo 
    <ins>
      aggiuntivo
    </ins>
    .
  </p>
  <p>
    Esempio di testo 
    <del>
      cancellato
    </del>
     o 
    <s>
      invalido
    </s>
    .
  </p>
  <p>
    Esempio di testo 
    <code>
      monospace
    </code>
    .
  </p>
</div>
`;

exports[`Stories Snapshots Documentazione/Organizzare i contenuti/Tipografia Paragrafo 1`] = `
<div>
  <p>
    Ullamco laboris nisi ut aliquid ex ea commodi consequat. Curabitur blandit tempus ardua ridiculus sed magna. Curabitur est gravida et libero vitae dictum. Phasellus laoreet lorem vel dolor tempus vehicula. Magna pars studiorum, prodita quaerimus.
  </p>
  <p>
    Ullamco laboris nisi ut aliquid ex ea commodi consequat. Curabitur blandit tempus ardua ridiculus sed magna. Curabitur est gravida et libero vitae dictum. Phasellus laoreet lorem vel dolor tempus vehicula. Magna pars studiorum, prodita quaerimus.
  </p>
</div>
`;

exports[`Stories Snapshots Documentazione/Organizzare i contenuti/Tipografia ParagrafoEvidenza 1`] = `
<div>
  <p
    class="lead"
  >
    Paragrafo in evidenza
  </p>
</div>
`;

exports[`Stories Snapshots Documentazione/Organizzare i contenuti/Tipografia RobotoMono 1`] = `
<div>
  <p
    class="font-monospace"
  >
    ABCDEFGHIJKLMNOPQRSTUVWXYZ
  </p>
  <p
    class="font-monospace"
  >
    abcdefghijklmnopqrstuvwxyz
  </p>
  <p
    class="font-monospace"
  >
    0123456789
  </p>
</div>
`;

exports[`Stories Snapshots Documentazione/Organizzare i contenuti/Tipografia Titillium 1`] = `
<div>
  <p
    class="text-sans-serif"
  >
    ABCDEFGHIJKLMNOPQRSTUVWXYZ
  </p>
  <p
    class="text-sans-serif"
  >
    abcdefghijklmnopqrstuvwxyz
  </p>
  <p
    class="text-sans-serif"
  >
    0123456789
  </p>
</div>
`;
